RESOLVED FIXED288921
Address UncountedCallArgsChecker exceptions in DocumentFullscreen.cpp/h
https://bugs.webkit.org/show_bug.cgi?id=288921
Summary Address UncountedCallArgsChecker exceptions in DocumentFullscreen.cpp/h
Tim Nguyen (:ntim)
Reported 2025-03-01 07:55:30 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-03-01 07:55:39 PST
Tim Nguyen (:ntim)
Comment 2 2025-03-01 07:56:57 PST
EWS
Comment 3 2025-03-01 11:23:46 PST
Committed 291452@main (567aaa4ab32e): <https://commits.webkit.org/291452@main> Reviewed commits have been landed. Closing PR #41717 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.