Address UncountedCallArgsChecker exceptions in DocumentFullscreen.cpp/h https://bugs.webkit.org/show_bug.cgi?id=288921 rdar://145923306

Reviewed by Chris Dumez.

* Source/WebCore/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:
* Source/WebCore/dom/DocumentFullscreen.cpp:
(WebCore::DocumentFullscreen::requestFullscreen):
(WebCore::DocumentFullscreen::willEnterFullscreen):
(WebCore::DocumentFullscreen::elementEnterFullscreen):
(WebCore::DocumentFullscreen::finishExitFullscreen):
(WebCore::DocumentFullscreen::didExitFullscreen):
(WebCore::DocumentFullscreen::dispatchPendingEvents):
* Source/WebCore/dom/DocumentFullscreen.h:
* Source/WebCore/dom/DocumentOrShadowRootFullscreen.cpp:
(WebCore::DocumentOrShadowRootFullscreen::fullscreenElement):
* Source/WebCore/page/Frame.h:
(WebCore::Frame::protectedMainFrame):
(WebCore::Frame::protectedMainFrame const):

Canonical link: https://commits.webkit.org/291452@main